--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>React Starter</title>
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+  <title>Error Tree</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+  </div>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
